--- a/app/views/layouts/demoable/application.html.erb
+++ b/app/views/layouts/demoable/application.html.erb
@@ -3,14 +3,23 @@
 	<head>
 	  <title>Demoable</title>
 	  <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
+	  <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+	  <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+	  <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
 	  <script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 	  <%= stylesheet_link_tag    "demoable/application", :media => "all" %>
 	  <%= javascript_include_tag "demoable/application" %>
 	  <%= csrf_meta_tags %>
 	</head>
 	<body>
-		<div class="containter">
-			<%= yield %>
+		<div class="container">
+			<div class="content">
+				<div class="row">
+					<div class="span12">
+						<%= yield %>
+					</div>
+				</div>
+			</div>
 		</div>
 	</body>
 </html>
