--- a/app/views/layouts/demoable/application.html.erb
+++ b/app/views/layouts/demoable/application.html.erb
@@ -12,6 +12,18 @@
 	  <%= csrf_meta_tags %>
 	</head>
 	<body>
+		<div class="navbar">
+    <div class="navbar-inner">
+      <div class="container">
+        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <%= link_to "Demoable", access_codes_path, :class => 'brand' %>
+		      </div>
+		    </div>
+		  </div>
+
 		<div class="container">
 			<div class="content">
 				<div class="row">
