--- a/app/views/demoable/access_codes/new.html.erb
+++ b/app/views/demoable/access_codes/new.html.erb
@@ -27,7 +27,7 @@
   </div>
 
   Duration</br>
-  <%= range_field_tag "duration", 1, :min => 1, :max => 10 %>
+  <%= range_field_tag "access_code[duration]", 1, :min => 1, :max => 10 %>
   <span id="range_val">1</span> day(s)
   </br>
   </br>
