--- a/app/views/layouts/demoable/application.html.erb
+++ b/app/views/layouts/demoable/application.html.erb
@@ -20,9 +20,16 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <%= link_to "Demoable", access_codes_path, :class => 'brand' %>
-		      </div>
-		    </div>
-		  </div>
+          <div class="nav-collapse collapse">
+            <ul class="nav">
+                <li>
+                  <%= link_to "Login", access_codes_login_path %>
+                </li>
+              </ul>
+          </div>
+        </div>
+	    </div>
+	  </div>
 
 		<div class="container">
 			<div class="content">
