fixed all the logic

--- a/app/views/demoable/access_codes/new.html.erb
+++ b/app/views/demoable/access_codes/new.html.erb
@@ -4,7 +4,7 @@
     $('#access_code_start_time').datepicker();
     $('#end_date').datepicker();
 
-    $('#duration').change(function() {
+    $('#access_code_duration').change(function() {
       $('#range_val').text($(this).val());
     });
   });
